--- a/WebTour/pom.xml
+++ b/WebTour/pom.xml
@@ -73,10 +73,13 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-    	<groupId>org.springframework.boot</groupId>
-   		 <artifactId>spring-boot-starter-mail</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.session</groupId>
+			<artifactId>spring-session-jdbc</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
