--- a/WebTour/src/main/resources/application.properties
+++ b/WebTour/src/main/resources/application.properties
@@ -15,3 +15,9 @@ spring.mail.username=nhatduong7975@gmail.com
 spring.mail.password=ghnq fbie wknm synk
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+server.servlet.session.timeout= 1d
+server.servlet.session.cookie.http-only=true 
+server.servlet.session.cookie.secure=true
+server.servlet.session.tracking-modes=cookie
+
+spring.session.jdbc.initialize-schema=always
